<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_24">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.GrowGuide.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plant_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPlantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/on_surface" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.GrowGuide.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:hint="@string/plant_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPlantType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/on_surface" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.GrowGuide.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:hint="@string/initial_notes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPlantNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:textColor="@color/on_surface" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.GrowGuide.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:hint="@string/watering_frequency_days">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPlantWateringFreq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/on_surface" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
