<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_24">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.GrowGuide.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_log_entry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editLogEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:textColor="@color/on_surface" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.GrowGuide.TextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/height_cm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLogHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/on_surface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.GrowGuide.TextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_12"
            android:layout_weight="1"
            android:hint="@string/leaf_count">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLogLeafCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/on_surface" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>
